experimental new css

--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -247,3 +247,12 @@
 .terminal a:hover {
     color: red;
 }
+
+.terminal-output{
+    background-color: black;
+    padding-left:10px;
+}
+
+.prompt {
+    padding-left:10px;
+}
