updating source and experimenting

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,9 @@ theme :
   name : twitter
 layout: default
 ---
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.org/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 {% include JB/setup %}
 {% include themes/twitter/page.html %}
-<script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+
