--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -22,7 +22,25 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
     -->
-  {% include mathjax_suppport %}
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+    TeX: {
+    equationNumbers: {
+    autoNumber: "AMS"
+    }
+    },
+    tex2jax: {
+    inlineMath: [ ['$','$'], ['\(', '\)'] ],
+    displayMath: [ ['$$','$$'] ],
+    processEscapes: true,
+    }
+    });
+  </script>
+  
+  <script type="text/javascript"
+	  src="https://cdnjs.cloudflare.org/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+
   </script>
 
   </head>
