--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -26,7 +26,7 @@
     MathJax.Hub.Config({
     TeX: {
     equationNumbers: {
-    autoNumber: "AMS"
+    autoNumber: "all"
     }
     },
     tex2jax: {
@@ -39,8 +39,6 @@
   
   <script type="text/javascript"
 	  src="https://cdnjs.cloudflare.org/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
-
   </script>
 
   </head>
