--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,10 +37,9 @@
     });
   </script>
   
-  <script type="text/javascript"
-	  src="https://cdnjs.cloudflare.org/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  <script type="text/javascript" async
+	  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
-
   </head>
 
   <body>
